--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.3",
     "@stripe/stripe-js": "^7.4.0",
+    "axios": "^1.10.0",
     "framer-motion": "^12.22.0",
     "next": "15.3.4",
     "react": "^19.0.0",
